feat: Add full AI pipeline and related infrastructure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
 fastapi
-sqlalchemy
-uvicorn
+uvicorn[standard]
 requests
+pandas
+scikit-learn
+joblib
+sentence-transformers
+faiss-cpu
+numpy
+python-dotenv
+openai
+transformers
+pydantic
+sqlalchemy
 alembic
+pytest
+pytest-asyncio
+httpx
