feat: Implement Ollama integration and fix date/total tracking
- Replace DistilGPT-2/DialoGPT with Ollama phi3:mini for AI responses
- Fix date picker in Flutter app for proper food logging
- Fix daily totals endpoint to show actual consumed nutrients instead of targets
- Update API parameter name from 'date' to 'log_date' for proper filtering
- Improve random forest model (placeholder for future scientific classification)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=sqlite:///./data/app.db
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/nutrition_db
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - HF_API_TOKEN=${HF_API_TOKEN}
       - FAISS_INDEX_PATH=backend/indexes/nutrition.index
@@ -18,6 +18,7 @@ services:
       - ./backend/indexes:/app/backend/indexes
     depends_on:
       - redis
+      - postgres
     restart: unless-stopped
 
   redis:
@@ -28,5 +29,18 @@ services:
     volumes:
       - redis_data:/data
 
+  postgres:
+    image: postgres:15-alpine
+    environment:
+      - POSTGRES_DB=nutrition_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
 volumes:
   redis_data:
+  postgres_data:
