--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ sentence-transformers
 faiss-cpu
 numpy
 python-dotenv
-openai
 transformers
 pydantic
 sqlalchemy
@@ -16,3 +15,9 @@ alembic
 pytest
 pytest-asyncio
 httpx
+torch
+psycopg2-binary
+huggingface_hub==0.10.0
+python-multipart
+requests>=2.28.0
+ollama
