--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,11 @@ pytest
 pytest-asyncio
 httpx
 torch
-psycopg2-binary
-huggingface_hub==0.10.0
-python-multipart
-requests>=2.28.0
 ollama
+tensorflow>=2.15.0
+tf-keras
+pillow
+opencv-python
+pyzbar
+protobuf>=3.20,<5.0  # Add this to constrain protobuf version
+google-cloud-vision
