--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ sqlalchemy
 alembic
 pytest
 pytest-asyncio
+pytest-cov
+pytest-mock
 httpx
 torch
 ollama
@@ -22,5 +24,13 @@ tf-keras
 pillow
 opencv-python
 pyzbar
-protobuf>=3.20,<5.0  # Add this to constrain protobuf version
+protobuf>=3.20,<5.0
 google-cloud-vision
+pytest-env
+python-multipart
+pytest-timeout
+mypy
+types-requests
+types-python-dateutil
+types-PyYAML
+types-protobuf
