Improve repository security and documentation
- Enhanced .gitignore to exclude test files, debug files, and model files
- Added SECURITY.md with security best practices and guidelines
- Added SETUP_GUIDE.md with comprehensive setup instructions
- Added verify_setup.py script to verify project configuration
- Credentials file remains protected in .gitignore
- All changes maintain backward compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,27 @@ coverage/
 .cache/
 .pytest_cache/
 .coverage/
+
+# Test and debug files
+test_*.py
+debug_*.py
+check_*.py
+T-T.py
+server.log
+logs.txt
+
+# Model files (can be regenerated)
+*.joblib
+*.pkl
+*.h5
+*.pth
+*.pt
+
+# Index files (can be regenerated)
+indexes/*.index
+indexes/*.npy
+indexes/*.jsonl
+
+# OneDrive sync files
+~$*
+*.tmp
