--- a/nutrition_app/pubspec.yaml
+++ b/nutrition_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.20.2
   shared_preferences: ^2.2.3
   connectivity_plus: ^7.0.0
+  flutter_secure_storage: ^9.0.0
 #  flutter_barcode_scanner: ^2.0.0
   http_parser: ^4.0.2
   file_picker: ^8.1.2
