--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,6 @@ tf-keras
 pillow
 opencv-python
 pyzbar
-protobuf>=3.20,<5.0
-google-cloud-vision
 pytest-env
 python-multipart
 pytest-timeout
@@ -34,3 +32,7 @@ types-requests
 types-python-dateutil
 types-PyYAML
 types-protobuf
+aiosqlite
+passlib[argon2]
+argon2-cffi
+python-jose[cryptography]
