--- a/nutrition_app/pubspec.yaml
+++ b/nutrition_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 #  flutter_barcode_scanner: ^2.0.0
   http_parser: ^4.0.2
   file_picker: ^8.1.2
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
