--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,71 @@
-fastapi
-uvicorn[standard]
-requests
-pandas
-scikit-learn
-joblib
-sentence-transformers
-faiss-cpu
-numpy
-python-dotenv
-transformers
-pydantic
-sqlalchemy
-alembic
-pytest
-pytest-asyncio
-pytest-cov
-pytest-mock
-httpx
-torch
-ollama
+# ============================================
+# AI-Powered Nutrition App - Requirements
+# ============================================
+
+# Core Web Framework
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
+starlette>=0.27.0
+
+# Database
+sqlalchemy>=2.0.0
+alembic>=1.10.0
+aiosqlite>=0.19.0
+
+# Authentication & Security
+passlib[argon2]>=1.7.4
+argon2-cffi>=21.0.0
+python-jose[cryptography]>=3.3.0
+
+# HTTP & API
+requests>=2.28.0
+httpx>=0.24.0
+python-multipart>=0.0.6
+
+# Data Processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Machine Learning - Core
+scikit-learn>=1.2.0
+joblib>=1.2.0
+
+# Machine Learning - Deep Learning
+torch>=2.0.0
 tensorflow>=2.15.0
-tf-keras
-pillow
-opencv-python
-pyzbar
-pytest-env
-python-multipart
-pytest-timeout
-mypy
-types-requests
-types-python-dateutil
-types-PyYAML
-types-protobuf
-aiosqlite
-passlib[argon2]
-argon2-cffi
-python-jose[cryptography]
+tf-keras>=2.15.0
+transformers>=4.30.0
+
+# Machine Learning - Embeddings & Search
+sentence-transformers>=2.2.0
+faiss-cpu>=1.7.0
+
+# Image Processing
+pillow>=9.5.0
+opencv-python>=4.7.0
+pyzbar>=0.1.9
+
+# LLM Integration
+ollama>=0.1.0
+openai>=1.0.0
+
+# Validation & Schema
+pydantic>=2.0.0
+
+# Environment
+python-dotenv>=1.0.0
+
+# Testing
+pytest>=7.3.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+pytest-mock>=3.10.0
+pytest-env>=0.8.0
+pytest-timeout>=2.1.0
+
+# Type Checking
+mypy>=1.3.0
+types-requests>=2.31.0
+types-python-dateutil>=2.8.0
+types-PyYAML>=6.0.0
+types-protobuf>=4.23.0
